--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -47,8 +47,6 @@ body {
 /* The hero image */
 .hero-image {
     /* The image used */
-    background-image: url("playa.jpg");
-
     /* Set a specific height */
     height: 40%;
     width: 70%;
@@ -57,8 +55,7 @@ body {
     margin-right: auto;
 
     /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
+    background: url("/images/playa.jpg") no-repeat center;
     background-size: cover;
     position: relative;
 }
@@ -116,6 +113,12 @@ body {
 }
 .fa-camera:hover{
     color: #c0cdd3;
+}
+
+.friendsnpost{
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
 }
 
 /*.container-special:hover .middle{
