--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -55,7 +55,7 @@ body {
     margin-right: auto;
 
     /* Position and center the image to scale nicely on all screens */
-    background: url("/images/playa.jpg") no-repeat center;
+    background: url("/images/playa.jpg") no-repeat center fixed;
     background-size: cover;
     position: relative;
 }
@@ -155,6 +155,39 @@ body {
     /*when navigating through the items using the arrow keys:*/
     background-color: DodgerBlue !important;
     color: #ffffff;
+}
+.album-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.album-column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.album-column img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .album-column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .album-column {
+        flex: 100%;
+        max-width: 100%;
+    }
 }
 
 /*.container-special:hover .middle{
