--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -44,7 +44,7 @@ body {
     margin-right: auto;
 
     /* Position and center the image to scale nicely on all screens */
-    background: url("/images/playa.jpg") no-repeat center fixed;
+    background: url("/images/playa.jpg") no-repeat center;
     background-size: cover;
     position: relative;
 }
@@ -179,6 +179,46 @@ body {
     }
 }
 
+/* Style the links inside the sidenav */
+#mySidenav a {
+    position: absolute; /* Position them relative to the browser window */
+    left: -140px; /* Position them outside of the screen */
+    transition: 0.3s; /* Add transition on hover */
+    padding: 15px; /* 15px padding */
+    width: 180px; /* Set a specific width */
+    text-decoration: none; /* Remove underline */
+    font-size: 18px; /* Increase font size */
+    color: white; /* White text color */
+    border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+}
+
+#mySidenav a:hover {
+    left: 0; /* On mouse-over, make the elements appear as they should */
+}
+
+/* The about link: 20px from the top with a green background */
+#friends {
+    top: 300px;
+    background-color: #78b2ab;
+}
+
+#addFriend {
+    top: 360px;
+    background-color: #afe1e3; /* Blue */
+}
+
+#albums {
+    top: 420px;
+    background-color: #ad5656; /* Red */
+}
+
+/*#contact {
+    top: 200px;
+    background-color: #555 !* Light Black *!
+}*/
+/*.container-special:hover .middle{
+  opacity: 1;
+} */
 .portrait {
     width: 100%;
     height: 240px;
